[project]
name = "promptherd"
version = "0.1.0"
description = "an app to evaluate and share prompts evaluations"
authors = [
    {name = "jonathanpasse@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema (>=4.25.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
